prevented list from jumping when opening

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -48,12 +48,21 @@ label {
     background: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1); }
   .custom-select__dropdown {
+    position: absolute;
     display: none;
     margin-top: 5px;
     background: #fff;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1); }
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+    overflow: scroll;
+    max-height: 150px; }
     .custom-select__dropdown.active {
       display: block; }
+    @media (min-width: 992px) and (max-width: 1200px) {
+      .custom-select__dropdown {
+        max-height: none; } }
+    @media (min-width: 992px) {
+      .custom-select__dropdown {
+        max-height: none; } }
   .custom-select__search-wrap:before {
     content: 'b';
     font-family: 'custom-select';
