--- a/src/sass/inc/_custom-select.sass
+++ b/src/sass/inc/_custom-select.sass
@@ -56,13 +56,24 @@ label
         // box-shadow: 0px 3px 6px rgba(black, .1)
 
     &__dropdown
+        position: absolute
         display: none
         margin-top: 5px
         background: #fff
         box-shadow: 0px 3px 6px rgba(black, .1)
+        overflow: scroll
+        max-height: 150px
 
         &.active
             display: block
+
+        @include mq-tablet
+            max-height: none
+
+        @include mq-desk
+            max-height: none
+
+
 
     &__search-wrap
         &:before
